[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugp100"
dynamic = ["version"]
description = "Controller for TP-Link Tapo P100 and other devices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "@petretiandrea", email = "petretiandrea@gmail.com" },
]
keywords = ["Tapo", "P100"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiohttp>=3.8.1",
  "certifi>=2021.5.30",
  "cryptography>=38.0.3",
  "jsons>=1.6.3",
  "requests>=2.27.1",
  "scapy>=2.5.0",
  "semantic-version==2.10.0",
  "urllib3>=2.5,<3",
]

[project.urls]
Homepage = "https://github.com/petretiandrea/plugp100"
Repository = "https://github.com/petretiandrea/plugp100"

[dependency-groups]
dev = [
  "async-timeout==4.0.2",
  "black==23.12.1",
  "pre-commit==3.6.0",
  "pytest-cov==4.1.0",
  "pytest-asyncio==0.23.4",
  "pyyaml==6.0.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.dynamic]
version = { attr = "plugp100.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
console_output_style = "count"
asyncio_mode = "auto"
